// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeeperRewards harvest (own escrow) succeeds for latest rewards root 1`] = `
Object {
  "calldataByteLength": 292,
  "gasUsed": 109207,
}
`;

exports[`KeeperRewards harvest (own escrow) succeeds for latest rewards root 2`] = `
Object {
  "calldataByteLength": 292,
  "gasUsed": 54562,
}
`;

exports[`KeeperRewards harvest (own escrow) succeeds for previous rewards root 1`] = `
Object {
  "calldataByteLength": 292,
  "gasUsed": 111376,
}
`;

exports[`KeeperRewards harvest (own escrow) succeeds for previous rewards root 2`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 72775,
}
`;

exports[`KeeperRewards harvest (own escrow) succeeds for previous rewards root 3`] = `
Object {
  "calldataByteLength": 292,
  "gasUsed": 56731,
}
`;

exports[`KeeperRewards harvest (shared escrow) succeeds for latest rewards root 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 143324,
}
`;

exports[`KeeperRewards harvest (shared escrow) succeeds for latest rewards root 2`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 52126,
}
`;

exports[`KeeperRewards harvest (shared escrow) succeeds for previous rewards root 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 145493,
}
`;

exports[`KeeperRewards harvest (shared escrow) succeeds for previous rewards root 2`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 89063,
}
`;

exports[`KeeperRewards harvest (shared escrow) succeeds for previous rewards root 3`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 54295,
}
`;

exports[`KeeperRewards set min rewards oracles succeeds 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 32232,
}
`;

exports[`KeeperRewards update rewards succeeds 1`] = `
Object {
  "calldataByteLength": 772,
  "gasUsed": 140851,
}
`;

exports[`KeeperRewards update rewards succeeds 2`] = `
Object {
  "calldataByteLength": 772,
  "gasUsed": 123763,
}
`;

exports[`KeeperRewards update rewards succeeds with all signatures 1`] = `
Object {
  "calldataByteLength": 1092,
  "gasUsed": 146019,
}
`;
